<resources>
    <string name="deneme">Bir saniye bekle\u2026</string>
    <string name="wizard_script_uri">android.resource://com.android.gmsetupwizard/raw/wizard_script</string>
    <string name="header_text">Sayfa Başlığı</string>
    <string name="header_policy">BIP Kullanıcı Sözleşmesi</string>
    <string name="name">Adınız</string>
    <string name="surname">Soyadınız</string>
    <string name="camera">Kamera</string>
    <string name="approved">Kabul Ediyorum</string>
    <string name="phone_header">Telefon Numaranızı giriniz</string>
    <string name="activation_header">SMS ile gelen 5 haneli kodu giriniz</string>
    <string name="bip_confirmation">Kayıt</string>
    <string name="bip_activation">SMS Aktivasyonu</string>
    <string name="region">+90</string>
    <string name="phone_hint">Telefon Numaranızı Giriniz</string>
    <string name="code_hint">Kod</string>
    <string name="sms_activation_content">Telefon numaranızı doğrulamak\niçin size 5 haneli doğrulama kodu\ngöndereceğiz</string>
    <string name="verification_content">Uygulamayı kullanmaya başlamak için, size SMS ile göndereceğimiz BIP şifresini boş kutuya yazabilirsiniz.</string>
    <string name="verification_phone">Doğrulama kodunuz, %1$s telefon numaranıza <b>%2$d saniye</b> içinde ulaşacaktır.</string>
    <string name="code_cannot_reach">Kodunuz ulaşmadı mı?</string>
    <string name="resend"><u>Tekrar gönderin</u></string>
    <string name="or">veya</string>
    <string name="change_number"><u>telefon numaranızı değiştirin.</u></string>
    <string name="tile_service">Lifecell</string>
    <string name="welcome_title">BİP\'e Hoşgeldin!</string>
    <string name="welcome_content">BiP\'in eğlenceli dünyasına katılmak için \'Kabul Et ve Devam Et\'e dokunun.</string>
    <string name="privacy_link"><u>Kullanım Koşulları ve\nVeri Koruma Politikası</u></string>
    <string name="agreement">Sözleşme</string>
    <string name="agree_continue">Kabul et ve devam et</string>
    <string name="app_name">GeneralMobile</string>
    <string name="secret_info"><font color='#9D9DAB'>BiP\'i kullanarak</font><u><font color='#069FE6'> gizlilik sözleşmesi ve kullanım şartlarını </font></u><font color='#9D9DAB'>kabul etmiş sayılırsınız</font> </string>
    <string name="pass"><u>Geç</u></string>
    <string name="bottom_bar_title">Gizlilik Sözleşmesi ve Kullanım Şartları</string>
    <string name="bottom_bar_go_on">Devam Et</string>
    <string name="accept_and_continue">Kabul et ve Devam Et</string>
    <string name="help_improve"><b>Help improve your General Mobile’s performance.</b> This will allow the sending of automatic diagnostics and anonymous usage data.</string>
    <string name="more_information"><u>More information.</u></string>
    <string name="please_note"><b>Please note that General Mobile may send push notifications about General Mobile products to your device and this notifications may include advertisements.</b> If you wish to receive notifications , please tick this box. Please be informed that you may also  request the cancellation of receiving these notifications  at any time by sending an e-mail to privacy@generalmobile.com, including your device’s serial number and the following message: “cancel Notifications for my device”.</string>
    <string name="if_you_do_not">If you do not wish to receive notifications , please tick this box. Please be informed that you may also  request the cancellation of receiving these notifications  at any time by sending an e-mail to privacy@generalmobile.com, including your device’s serial number and the following message: “cancel Notifications for my device”.</string>
    <string name="with_the_aim">General Mobile stores your personal information for as long as necessary to meet the purposes outlined in this Privacy Policy. In addition to the information you already shared, General Mobile can use your device\'s software to send information such as device information, location information, Google account, email address for offers and promotions. If you agree with the collection of the above data, enable this option.</string>
    <string name="this_information">This information will be treated as strictly confidential and under no circumstances shall it be used to identify the User. This information enables us to identify and correct any errors and, by default, improve your experience when using your General Mobile device.</string>
    <string name="general_mobile_services_help">General Mobile Services help us improve the performance of your devices with software updates.. We aim to make your life easier by offering inspiring and impressive experiences. It is our priority to protect your privacy and your personal information.</string>
    <string name="general_mobile_services">General Mobile Services</string>
    <string name="privacy_policy_text"><u>Privacy Policy</u></string>
    <string name="privacy_policy_header">General Mobile Privacy Policy</string>
</resources>