<?xml version="1.0" encoding="utf-8"?>
<com.android.setupwizardlib.SetupWizardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res­auto"
    android:id="@+id/bip_welcome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:layout="@layout/suw_template_header_collapsed" >

   <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general_mobile_services_help"
        android:textColor="@color/color_black"
        android:textSize="18sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <Switch
            android:id="@+id/helpSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true" />

        <TextView
            android:id="@+id/helpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/helpSwitch"
            android:text="@string/help_improve"
            android:textColor="@color/color_black" />

        <TextView
            android:id="@+id/thisText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/helpText"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/helpSwitch"
            android:text="@string/this_information" />

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <Switch
            android:id="@+id/helpSwitch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" 
            android:checked="true"/>

        <TextView
            android:id="@+id/withText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/helpSwitch2"
            android:text="@string/with_the_aim"
            android:textColor="@color/color_black" />

        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/withText" 
            android:textColor="@color/primary"
            android:text="@string/privacy_policy_text" />


    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <Switch
            android:id="@+id/helpSwitch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true" />

        <TextView
            android:id="@+id/pleaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/helpSwitch3"
            android:text="@string/please_note"
            android:textColor="@color/color_black" />

    </RelativeLayout>


</LinearLayout>

</com.android.setupwizardlib.SetupWizardLayout>
